debathena-afs-config (1.26) UNRELEASED; urgency=medium

  * Update CellServDB from /afs/athena/service/CellServDB.new.

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 19 Aug 2017 23:12:48 -0400

debathena-afs-config (1.25) unstable; urgency=medium

  * Update CellServDB.

 -- Anders Kaseorg <andersk@mit.edu>  Sun, 18 Sep 2016 07:13:38 -0400

debathena-afs-config (1.24) unstable; urgency=medium

  * Update CellServDB.
  * Download reference copies over https.
  * Drop numenor.mit.edu from CellAlias.debathena-extra.

 -- Anders Kaseorg <andersk@mit.edu>  Sat, 18 Jun 2016 04:20:15 -0400

debathena-afs-config (1.23) unstable; urgency=low

  * Modify afs.client.conf to pass AFS_DYNROOT=Yes to the broken versions
    that require it (Trac: #1416)
  * Correct spelling error in Description field in control file

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 27 Feb 2014 10:19:11 -0500

debathena-afs-config (1.22) unstable; urgency=low

  [ Jonathan Reed ]
  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

  [ Victor Vasiliev ]
  * Switch to source format 3.0 (quilt)
  * Add git-buildpackage configuration

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:38:17 -0400

debathena-afs-config (1.21) unstable; urgency=low

  * Update CellServDB to pick up new net.mit.edu cell servers

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 23 Jan 2013 09:59:25 -0500

debathena-afs-config (1.20) unstable; urgency=low

  * Catch up with athena-cell CellServDB and CellAlias changes (the
    dev cell has been decommissioned.)

 -- Benjamin Kaduk <kaduk@mit.edu>  Thu, 09 Feb 2012 21:54:28 -0500

debathena-afs-config (1.19) unstable; urgency=low

  * No-change rebuild to pick up config-package-dev 4.13 changes

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 26 Oct 2011 17:12:43 -0400

debathena-afs-config (1.18) unstable; urgency=low

  * CellServDB update from /afs/athena/service/CellServDB (remove