@@ -1,6 +1,7 @@
 debathena-afs-config (1.26) UNRELEASED; urgency=medium
 
   * Update CellServDB from /afs/athena/service/CellServDB.new.
+  * debian/rules: Remove special handling for Numenor.
 
  -- Geoffrey Thomas <geofft@mit.edu>  Sat, 19 Aug 2017 23:12:48 -0400
 
